--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,6 +1,7 @@
 @import url(global.css);
 @import url(header.css); 
 @import url(gallery-main-seasons.css); 
+@import url(gallery_carousel_background.jpeg)
 
 /*footer */
 /* @import url(name.css); */
