gallery carousel start

--- a/partials/gallery-main-our-guests.html
+++ b/partials/gallery-main-our-guests.html
@@ -1,3 +1,6 @@
-<section>      
-    <h2>Our guests</h2>
+<section class="gallery_carousel">
+    <h2 class="gallery_carousel__title">Our guests</h2>
+    <div class="gallery_carousel__body">
+        <p>Body carousel</p>
+    </div>
 </section>
