--- a/css/about.season-activities.css
+++ b/css/about.season-activities.css
@@ -6,16 +6,18 @@
 }
 .season-activities {
     font-family: var(--description-font-family);
-    flex: 1;
+    margin: 0 24px;
+    /* flex: 1;
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: center;
+    justify-content: center; */
 }
 .season-activities__title {
     padding-top: 83px;
     font-size: 34px;
     font-weight: 500;
+    text-align: center;
 }
 .cards-up__image-winter {
     max-width: 352px;
@@ -70,6 +72,9 @@
     color: rgb(249, 130, 80);
 }
 @media (min-width:401px){
+    .season-activities {
+        margin: 0 30px;
+    }
     .container{
         margin: auto;
         max-width: 740px;
@@ -109,10 +114,13 @@
     }   
 }
 @media (min-width:801px){
+    .season-activities {
+        margin: 0 15px;
+    }
     .container{
         margin: auto;
         max-width: 1170px;
-        display: block;
+        display: block;    
         overflow-x: hidden;
     }
     .season-activities__title {
