start carousel photo

--- a/partials/gallery-main-our-guests.html
+++ b/partials/gallery-main-our-guests.html
@@ -1,6 +1,28 @@
 <section class="gallery_carousel">
     <h2 class="gallery_carousel__title">Our guests</h2>
     <div class="gallery_carousel__body">
-        <p>Body carousel</p>
+        <ul>
+            <li>
+                <img src="img/gallery-carousel/galery_carousel-1.jpeg" alt="gallery carousel photo">
+            </li>
+            <li>
+                <img src="img/gallery-carousel/galery_carousel-2.jpeg" alt="gallery carousel photo"> 
+            </li>
+            <li>
+                <img src="img/gallery-carousel/galery_carousel-3.jpeg" alt="gallery carousel photo">
+            </li>
+            <li>
+                <img src="img/gallery-carousel/galery_carousel-4.jpeg" alt="gallery carousel photo">
+            </li>
+            <li>
+                <img src="img/gallery-carousel/galery_carousel-5.jpeg" alt="gallery carousel photo">
+            </li>
+            <li>
+                <img src="img/gallery-carousel/galery_carousel-6.jpeg" alt="gallery carousel photo">
+            </li>
+            <li>
+                <img src="img/gallery-carousel/galery_carousel-7.jpeg" alt="gallery carousel photo">
+            </li>
+        </ul>
     </div>
 </section>
