--- a/css/global.css
+++ b/css/global.css
@@ -1,7 +1,12 @@
- /* global*/
- @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
+ /* global*/ 
  @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+ @font-face {
+    font-family: 'Circular Std', serif;
+    src: url('fonts/CircularStd-Black.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
  * {
      box-sizing: border-box;
      margin: 0;
@@ -17,10 +22,10 @@
      --description-color: #848484;
      --fields-background-color: #f5f5f5;
 
-     --title-font-family: 'Fredoka', sans-serif;
+     --title-font-family: 'Circular Std', serif;
      --description-font-family: 'Roboto', sans-serif;
      scroll-behavior: smooth;
-     font-family: 'Montserrat', sans-serif;
+     
  }
 
  img {
