--- a/css/about.season-activities.css
+++ b/css/about.season-activities.css
@@ -6,7 +6,9 @@
 }
 .season-activities {
     font-family: var(--description-font-family);
-    margin: 0 24px;
+    font-weight: 400;
+    line-height: 25px;
+    /* margin: 0 24px; */
     /* flex: 1;
     display: flex;
     align-items: center;
