--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,6 @@
  /* global*/ 
  @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 
  @font-face {
     font-family: 'Circular Std', serif;
@@ -24,6 +25,7 @@
 
      --title-font-family: 'Circular Std', serif;
      --description-font-family: 'Roboto', sans-serif;
+     font-family: 'Open Sans', serif;
      scroll-behavior: smooth;
      
  }
