--- a/css/global.css
+++ b/css/global.css
@@ -1,10 +1,10 @@
  /* global*/ 
- @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
- @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap'); 
 
  @font-face {
     font-family: 'Circular Std', serif;
-    src: url('fonts/CircularStd-Black.woff') format('woff');
+    src: url('fonts/CircularStd-Black.woff2') format('woff2'),
+        url('fonts/CircularStd-Black.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -25,9 +25,8 @@
 
      --title-font-family: 'Circular Std', serif;
      --description-font-family: 'Roboto', sans-serif;
-     font-family: 'Open Sans', serif;
-     scroll-behavior: smooth;
-     
+     font-family: 'Circular Std', serif;
+     scroll-behavior: smooth;     
  }
 
  img {
