--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,7 +1,4 @@
 @import url(global.css);
 @import url(header.css); 
 @import url(gallery-main-seasons.css); 
-@import url(gallery-main-carousel.css)
-
-/*footer */
-/* @import url(name.css); */
+@import url(gallery-main-carousel.css);
