--- a/css/index.things-to-do.css
+++ b/css/index.things-to-do.css
@@ -1,30 +1,30 @@
 .things-to-do__title {
-    color: var(--text-color, #333333);
+    color: var(--text-color);
     font-family: var(--title-font-family);
-    font-size: 39px;
-    font-weight: 500;
+    font-size: 2.1rem;
+    font-weight: bold;
     text-align: center;
 }
 
 .cards__heading {
-    color: var(--text-color, #333333);
+    color: var(--text-color);
     font-family: 'Circular Std', serif;
-    font-size: 23px;
-    font-weight: 500;
+    font-size: 22px;
+    font-weight: bold;
     text-align: center;
 }
 
 .cards__subheading {
     box-sizing: border-box;
-    color: var(--title-color, #f98250);
+    color: var(--title-color);
     font-family: 'Circular Std', serif;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: bold;
     text-align: center;
 }
 
 .cards__description {
-    color: var(--description-color, #848484);
+    color: var(--description-color);
     font-family: var(--description-font-family);
     font-size: 16px;
     font-weight: 400;
@@ -32,14 +32,13 @@
 }
 
 .cards__item {
-    background-color: var(--background-color, #ffffff);
-    border-color: rgb(40, 37, 32);
+    background-color: var(--background-color);
+    border-color: var(--fields-border-color);
     display: block;
 }
 
 .cards__image {
     border-radius: 10px;
-    border-color: rgb(40, 37, 32);
-    margin: 20px;
+    border-color: var(--fields-border-color);    
     width: 313px;
 }
