--- a/partials/index.adventure.partial.html
+++ b/partials/index.adventure.partial.html
@@ -1,10 +1,13 @@
 <section class="adventure">
-    <h2 class="adventure__title">Your Adventure Starts Here</h2>
-    <p class="adventure__subtitle">Welcome to a perfect escape in Yosemite Mariposa County, California! Yosemite
-        National Park is known for its giant sequoias and the observation deck of the Portal View, which overlooks the
-        Briddlevale Falls, the El Capitan granite rocks and the Half House. The Yosemite village proudly offers a lot of
-        shops, restaurants, hotels, and a museum, along with the Ansel Adams Gallery. Plan your adventure and find your
-        place in Yosemite!</p>
+    <div class="adventure__title-and-subtitle">
+        <h2 class="adventure__title">Your Adventure Starts Here</h2>
+        <p class="adventure__subtitle">Welcome to a perfect escape in Yosemite Mariposa County, California! Yosemite
+            National Park is known for its giant sequoias and the observation deck of the Portal View, which overlooks
+            the Briddlevale Falls, the El Capitan granite rocks and the Half House. The Yosemite village proudly offers a
+            lot of shops, restaurants, hotels, and a museum, along with the Ansel Adams Gallery. Plan your adventure and find
+            your place in Yosemite!
+        </p>
+    </div>
     <div class="adventure__horse-ranch">
         <img src="img/horse-ranch-cottage.jpeg" alt="Horse ranch cottage">
         <h3>Yosemite Gateway Horse Ranch "Getaway" Cottage</h3>
