--- a/css/index.css
+++ b/css/index.css
@@ -4,4 +4,5 @@
 @import url(index.things-to-do.css);
 @import url(index.adventure.css);
 @import url(index.answer-for-question.css);
-@import url(form.css)
+@import url(form.css);
+@import url(footer.css);
